<resources>
    <string name="app_name">ConversationalIST</string>
    <string name="enter_username">Enter Username</string>
    <string name="conversationalist">ConversationalIST</string>
    <string name="login">Login</string>
    <string name="ist_logo">IST Logo</string>
    <string name="password">Password</string>
    <string name="attempts_left">Attempts Left:</string>
    <string name="quit">Quit</string>
    <string name="register">Register</string>
    <string name="chatrooms">Chatrooms</string>
    <string name="_3">3</string>
</resources>